--- a/gpprojecttest/My Project/Resources.resx
+++ b/gpprojecttest/My Project/Resources.resx
@@ -163,4 +163,7 @@
   <data name="the_war_games" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\the_war_games.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="movie_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\movie_icon-removebg-preview.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
